--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=bebetting_test_db
+      - POSTGRES_DB=test_db
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
